--- a/css/sign-in.css
+++ b/css/sign-in.css
@@ -133,7 +133,7 @@
   font-family: 'OswaldRegular-Regular', Helvetica;
   font-size: 30px;
   font-style: normal;
-  font-weight: 400;
+  font-weight: bold;
   height: auto;
   margin-left: 7%;
   letter-spacing: 0.00px;
@@ -167,7 +167,7 @@
   font-family: 'OswaldRegular-Regular', Helvetica;
   font-size: 44px;
   font-style: normal;
-  font-weight: 400;
+  font-weight: bold;
   height: auto;
   left: 9%;
   letter-spacing: 0.00px;
