--- a/css/addfunds.css
+++ b/css/addfunds.css
@@ -677,6 +677,41 @@
   .addfunds .line-8-0xy0vn {
     top: 54px !important;
   }
+  .addfunds .letters {
+    top: -400px;
+  }
+  .addfunds .adding-funds-to-ounts-made-easy-0PZcXW,
+  .addfunds .automatic-payme-dit-debit-cards-0PZcXW {
+    font-size: 50px;
+  }
+  .addfunds .group-10-0PZcXW {
+    margin-top: 62px;
+    margin-left: 6px;
+  }
+  .segoeui-regular-normal-nero-20px {
+    font-size: 22px !important;
+  }
+  .addfunds .automatic-payme-for-transaction-aewt80,
+  .addfunds .manual-payments-nto-your-wallet-aewt80 {
+    font-size: 20px !important;
+  } 
+  .addfunds .ellipse-16-aewt80 {
+    top: 360px;
+  }
+  .addfunds .group-9-0PZcXW {
+    left: 40px;
+  }
+  .addfunds .letters2 {
+    top: -298px;
+  }
+  .addfunds .group-13-0PZcXW {
+    margin-top: 64px;
+    height: 129px;
+  }
+  .addfunds .group-12-0PZcXW {
+    height: 167px;
+    margin-top: 31px;
+  }
 }
 
 
@@ -689,6 +724,26 @@
   }
   .addfunds .everything-you-se-our-services-y1HRxC  {
     top: 345px;
+  }
+  .addfunds .adding-funds-to-ounts-made-easy-0PZcXW,
+  .addfunds .automatic-payme-dit-debit-cards-0PZcXW {
+    font-size: 40px;
+  }
+  .addfunds .group-10-0PZcXW {
+    margin-top: 67px;
+  }
+  .segoeui-regular-normal-nero-20px {
+    font-size: 19px !important;
+  }
+  .addfunds .group-9-0PZcXW {
+    left:  57px;
+  }
+  .addfunds .automatic-payme-for-transaction-aewt80,
+  .addfunds .manual-payments-nto-your-wallet-aewt80 {
+    font-size: 18px;
+  }
+  .addfunds .ellipse-16-aewt80 {
+    top: 365px;
   }
 }
 
@@ -770,6 +825,9 @@
   }
   .addfunds .group-10-0PZcXW {
     height: 53px;
+  }
+  .segoeui-regular-normal-nero-20px {
+    font-size: 14px !important;
   }
 }
 
@@ -942,6 +1000,13 @@
      margin-top: 124px;
      width: 72%;
    }
+   .addfunds .group-12-0PZcXW {
+     height: 87px;
+     margin-top: -6px;
+   }
+   .addfunds .group-13-0PZcXW {
+     height: 73px;
+   }
    .addfunds .automatic-payme-dit-debit-cards-0PZcXW {
      font-size: 16px;
    }
@@ -954,6 +1019,16 @@
    .addfunds .you-will-be-red-tal-to-continue-yS0cYZ {
      font-size: 12px;
    }
+   .addfunds .x1-wcA9lP,
+   .addfunds .x2-wcA9lP {
+     font-size: 10px !important;
+   }
+   .segoeui-regular-normal-nero-20px {
+    font-size: 10px !important;
+  }
+  .addfunds .ellipse-16-aewt80 {
+    top: 323px;
+  }
 }
 
 
@@ -1065,10 +1140,7 @@
   .addfunds .group-11-0PZcXW {
     margin-top: -1px;
   }
-  .addfunds .x1-wcA9lP,
-  .addfunds .x2-wcA9lP {
-    font-size: 10px !important;
-  }
+
   .addfunds .ellipse-16-aewt80 {
     top: 189px;
   }
